--- a/src/input.css
+++ b/src/input.css
@@ -15,41 +15,17 @@ body{
 }
 
 .banner .tns-controls{
-    @apply absolute top-[50%] left-0 right-0 max-w-[120rem] z-[10] mx-auto flex justify-between
+    @apply absolute top-[50%] left-0 right-0 max-w-[120rem] z-[10] mx-auto flex justify-between 
 }
 
 .banner .tns-controls button{
-    @apply bg-primary p-[.8rem] rounded-full text-[1.5rem] flex items-center text-light
+    @apply hover:bg-dark bg-primary p-[.8rem] rounded-full text-[1.5rem] flex items-center text-light
 }
 
-.tns-controls{
-    @apply absolute top-[50%] right-0 left-0 mx-[2rem] flex items-center justify-between max-w-[106rem] z-10;
-}
-.tns-controls button{
-    @apply flex items-center;
-}
-.tns-controls button:first-child{
-    @apply  text-gray-500 transition-all hover:-translate-x-1 hover:text-primary;
-}
-.tns-controls button:last-child{
-    @apply  text-gray-500 transition-all hover:translate-x-1 hover:text-primary;
-}
-.tns-controls button:first-child::after{
-    @apply block bg-gray-500 w-[2rem] h-[.11rem] content-[""] hover:translate-x-2 hover:bg-primary transition-all;
-}
-.tns-controls button:last-child::before{
-    @apply block bg-gray-500 w-[2rem] h-[.11rem] content-[""] hover:-translate-x-2 hover:bg-primary transition-all;
-}
-.tns-nav button{
-    @apply bg-gray-400 h-[1rem] w-[1rem] my-1 mx-1 transition-all sm:hidden;
-}
-.tns-nav .tns-nav-active{
-    @apply bg-primary transition-all;
-}
+
 .instructor .tns-controls{
-    @apply absolute top-[20%] left-[80%] right-[15%] mx-auto
+    @apply absolute top-[20%] left-[80%] right-[5%] mx-auto
 }
-
 .instructor .tns-controls button{
     @apply hover:bg-dark hover:text-light min-w-[3rem] bg-primary rounded-full px-[1rem] py-[.5rem] text-light text-[1.5rem]
 }
@@ -58,7 +34,7 @@ body{
 }
 
 .feature .tns-controls{
-    @apply absolute top-[50%] right-0 left-0 flex items-center justify-between z-[10]  mx-auto
+    @apply z-10 hidden lg:flex items-center justify-between absolute w-full right-0 top-[40%] opacity-0 transition-all
 }
 
 .feature .tns-controls button{
@@ -68,6 +44,10 @@ body{
 .feature .tns-outer{
     @apply lg:translate-y-[-12rem]
 }
+.feature:hover .tns-controls{
+    @apply opacity-100 transition-all;
+}
+
 .testimonial .tns-controls button {
 	@apply mb-[3rem] mt-[2rem] hover:bg-dark hover:text-light min-w-[3rem] bg-primary rounded-full px-[1rem] py-[.5rem] text-light text-[1.5rem]
 }
@@ -262,49 +242,6 @@ body{
 
 
 
-
- /** ---------- BANNER ---------- */
-
-    .banner{
-        @apply relative
-    }
-    .slider__item_1{
-        @apply bg-bg__banner bg-cover bg-no-repeat bg-fixed h-[75vh] lg:h-[70vh] bg-center w-[30rem] lg:w-[100vw]
-    }
-    .slider__item_2{
-        @apply bg-bg__banner bg-cover bg-no-repeat bg-fixed h-[75vh] lg:h-[70vh] bg-center w-[30rem] lg:w-[100vw]
-    }
-    .slider__item_1 img{
-        @apply sm:hidden lg:flex
-    }
-    .slider__item_2 img{
-        @apply sm:hidden lg:flex
-    }
-    .slider__text{
-        @apply text-light text-center pt-[10rem]  font-semibold
-    }
-    .slider__text h1{
-        @apply text-[2rem] mx-auto w-[23rem]
-    }
-    .slider__text P{
-        @apply text-[1.2rem] mx-auto w-[25rem]
-    }
-    .discover__btn{
-        @apply  mt-[4rem] font-semibold flex gap-[2rem] justify-center;
-    }
-    .discover__btn a:first-child{
-        @apply text-center text-light bg-primary border-[2px] border-primary px-[2rem] py-[1rem] w-[11rem] h-[4rem] ;
-    }
-    .discover__btn a:first-child:hover{
-        @apply border-dark bg-dark text-light transition-all duration-500;
-    }
-    .discover__btn a:last-child{
-        @apply   text-primary px-[1.7rem] py-[.8rem] bg-transparent border-[2px] border-primary w-[11rem] h-[4rem];
-    }
-    .discover__btn a:last-child:hover{
-        @apply bg-primary text-light border-primary transition-all duration-500;
-    }
-
 /** ---------- BANNER ---------- */
 
 .banner .container{
@@ -379,7 +316,7 @@ body{
     .feature__text p{
         @apply text-[1.1rem] font-[500] text-primary cursor-default
     }
-     /** ---------- ABOUT BANNER ---------- */
+     /** ---------- EXPERT ---------- */
 
      .expert{
         @apply py-[2rem] 
@@ -447,7 +384,7 @@ body{
 
     /* -------------------------------------SUBJECT--------------------------------------- */
     .subject{
-        @apply bg-[url(../dist/img/bg.png)] bg-cover bg-center pt-[5rem] lg:bg-top;
+        @apply bg-[#f7fdfb] bg-[url(../dist/img/bg.png)] bg-cover bg-center pt-[5rem] lg:bg-top;
     }
     .subject__text{
         @apply text-center my-[2rem];
@@ -583,9 +520,40 @@ body{
     .instructor__social ul li a:hover{
         @apply text-light bg-primary transition ease-in-out duration-300
     }
+/*-----------------------PROGRAM----------------------*/
+.prog{
+    @apply my-[3rem]
+}
+.prog__title{
+    @apply text-center font-bold lg:m-auto lg:w-[40rem]
+}
+.prog__title h2{
+    @apply text-primary text-[1.5rem] lg:text-[1rem]
+}
+.prog__title h3{
+    @apply text-dark text-[1.6rem] lg:text-[2.5rem]
+}
+.prog__group{
+    @apply lg:grid lg:grid-cols-4 gap-[2rem]
+}
+.prog__card{
+    @apply mt-[2rem] py-[3.5rem] bg-light border-[2px] rounded-[.5rem] border-green-200 drop-shadow-xl 
+}
+.prog__card:hover{
+    @apply border-light 
+}
+.prog__content{
+    @apply flex flex-col items-center 
+}
+.prog__content a{
+    @apply text-[1.5rem] text-dark hover:text-primary font-[600] my-[.5rem] transition ease-in-out duration-300 
+}
 
+.prog__content p{
+    @apply text-[1.1rem] text-grey
+}
 
-        /** ---------- NEWS ---------- */
+/** ---------- NEWS ---------- */
 
         .news{
             @apply relative pb-[5rem]
@@ -674,6 +642,62 @@ body{
         .news__content .shallow-white{
             @apply text-[1.1rem] font-[500] hover:text-light w-fit lg:pr-[1.5rem]
         }
+    /*-----------------------Testimonial----------------------*/
+.testimonial{
+    @apply relative py-[4rem] bg-[#f7fdfb];
+}
+
+.testimonial-text{
+    @apply mt-[2rem];
+}
+.testimonial-text h4{
+    @apply text-primary text-center text-[1.7rem] font-bold;
+}
+.testimonial-text h2{
+    @apply text-dark text-center text-[1.6rem] font-bold;
+}
+.testimonial-item ul{
+    @apply flex gap-[.3rem] text-primary mb-[1rem];
+}
+.testimonial-item ul li{
+    @apply text-[1.2rem];
+}
+.testimonial-item p{
+    @apply text-[1.4rem] text-gray-500 font-medium;
+}
+.testimonial-name{
+    @apply flex items-center gap-[.8rem] mt-[1rem];
+}
+.testimonial-name img{
+    @apply w-[3.5rem]
+}
+.testimonial-position h3{
+    @apply text-dark text-[1.1rem] font-bold;
+}
+.testimonial-position p{
+    @apply text-primary text-[.9rem]
+}
+.testimonial-slider{
+    @apply mt-[2rem]
+}
+
+@media (min-width:1080px){
+    .testomonial__wrapper{
+        @apply grid grid-cols-2;
+    }
+    .testimonial-img img{
+        @apply w-[30rem];
+    }
+    .testimonial-text{
+        @apply mt-0;
+    }
+    .testimonial-text h4{
+        @apply text-[1rem];
+    }
+    .testimonial-text h2{
+        @apply text-[2.7rem] leading-[1.2] w-[35rem] mx-auto;
+    }
+}
 
        /*-----------------------online----------------------*/
        .online__text__page{
@@ -749,37 +773,35 @@ body{
             @apply py-[2rem];
         }
 
-      
-    .letter__wrapper{
-            @apply py-[2rem];
-        }
-        .letter__content{
-            @apply absolute -bottom-[710rem] left-0 w-full lg:-bottom-[404rem];
-        }
-        .letter__newsletter{
-            @apply bg-primary px-[1rem] py-[2rem] rounded-md lg:p-[2.5rem] mx-auto lg:w-[80rem]  lg:flex lg:items-center lg:justify-between; 
-        }
-        .letter__newsletter__text h4{
-            @apply text-white font-bold text-[1.5rem]; 
-        }
-        .letter__newsletter__text p{
-            @apply text-white font-semibold text-[1.2rem]; 
-        }
-        .letter__newsletter__actions{
-            @apply mt-[2rem] lg:flex lg:h-[4rem]; 
-        }
-        .letter__newsletter__actions input{
-            @apply p-4 w-full rounded-md lg:rounded-r-none lg:w-[30rem]; 
-        }
-        .letter__newsletter__actions a{
-            @apply bg-gray-700 w-full flex items-center justify-center h-fit p-4 mt-[1rem] lg:m-0 lg:h-full lg:w-[10rem] hover:bg-[#18406b] transition-all duration-500 ; 
-        }
-        .letter__newsletter__actions a i{
-            @apply text-white; 
-        }
+    /*-----------------------newsletter----------------------*/
 
+    .newsletter__card{
+        @apply flex items-center bg-primary rounded-[.8rem] min-h-[25rem] translate-y-[5.5rem] lg:min-h-[15rem]
+    }
 
+    .newsletter__content{
+        @apply text-light px-[2rem] w-full lg:grid lg:grid-cols-[2.5fr_2fr] lg:justify-between
+    }
 
+    .newsletter__form{
+        @apply mt-[2rem] lg:flex lg:h-[4rem]
+    }
+
+    .newsletter__content h4{
+        @apply text-[2rem] font-[600]
+    }
+
+    .newsletter__content p{
+        @apply text-[1.3rem] mb-[1.5rem]
+    }
+
+    .newsletter__content input{
+        @apply mt-[.2rem] text-[1rem] text-[#b0afaf] px-[1.5rem] py-[1rem] w-full rounded-[.1rem] lg:w-[25rem]
+    }
+
+    .newsletter__btn{
+        @apply bg-gray-700 w-full flex items-center justify-center h-fit p-4 mt-[1rem] lg:m-0 lg:h-full lg:w-[10rem] hover:bg-[#18406b] transition-all duration-500 
+    }
     
         /*-----------------------middle-footer----------------------*/
 .footer__middle {
@@ -832,99 +854,6 @@ body{
 .row{
     @apply border-t-[1px]
 lg:flex lg:justify-between lg:items-center
-}
-
-
-/*-----------------------PROGRAM----------------------*/
-.prog{
-    @apply my-[3rem]
-}
-.prog__title{
-    @apply text-center font-bold lg:m-auto lg:w-[40rem]
-}
-.prog__title h2{
-    @apply text-primary text-[1.5rem] lg:text-[1rem]
-}
-.prog__title h3{
-    @apply text-dark text-[1.6rem] lg:text-[2.5rem]
-}
-.prog__group{
-    @apply lg:grid lg:grid-cols-4 gap-[2rem]
-}
-.prog__card{
-    @apply mt-[2rem] py-[3.5rem] bg-light border-[2px] rounded-[.5rem] border-green-200 drop-shadow-xl 
-}
-/* .prog__card:not(:first-child){
-    @apply mt-[1.5rem]
-} */
-.prog__card:hover{
-    @apply border-light 
-}
-.prog__content{
-    @apply flex flex-col items-center 
-}
-.prog__content a{
-    @apply text-[1.5rem] text-dark hover:text-primary font-[600] my-[.5rem] transition ease-in-out duration-300 
-}
-
-.prog__content p{
-    @apply text-[1.1rem] text-grey
-}
-/*-----------------------Testimonial----------------------*/
-.testimonial{
-    @apply relative py-[4rem];
-}
-
-.testimonial-text{
-    @apply mt-[2rem];
-}
-.testimonial-text h4{
-    @apply text-primary text-center text-[1.7rem] font-bold;
-}
-.testimonial-text h2{
-    @apply text-dark text-center text-[1.6rem] font-bold;
-}
-.testimonial-item ul{
-    @apply flex gap-[.3rem] text-primary mb-[1rem];
-}
-.testimonial-item ul li{
-    @apply text-[1.2rem];
-}
-.testimonial-item p{
-    @apply text-[1.4rem] text-gray-500 font-medium;
-}
-.testimonial-name{
-    @apply flex items-center gap-[.8rem] mt-[1rem];
-}
-.testimonial-name img{
-    @apply w-[3.5rem]
-}
-.testimonial-position h3{
-    @apply text-dark text-[1.1rem] font-bold;
-}
-.testimonial-position p{
-    @apply text-primary text-[.9rem]
-}
-.testimonial-slider{
-    @apply mt-[2rem]
-}
-
-@media (min-width:1080px){
-    .testomonial__wrapper{
-        @apply grid grid-cols-2;
-    }
-    .testimonial-img img{
-        @apply w-[30rem];
-    }
-    .testimonial-text{
-        @apply mt-0;
-    }
-    .testimonial-text h4{
-        @apply text-[1rem];
-    }
-    .testimonial-text h2{
-        @apply text-[2.7rem] leading-[1.2] w-[35rem] mx-auto;
-    }
 }
 
 
